cmake_minimum_required (VERSION 2.6)
project (customalloc2)
set(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_C_FLAGS "-O0 -ggdb")
set(CMAKE_C_FLAGS_DEBUG "-O0 -ggdb")
set(CMAKE_C_FLAGS_RELEASE "-O0 -ggdb")
set(CMAKE_CXX_FLAGS "-O0 -ggdb")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "-O0 -ggdb")
set(ALLOCLIBS z)
file(GLOB allocsrc "*.h" "*.cpp" "*.c")
add_executable(customalloc2 ${allocsrc})
target_link_libraries(customalloc2 ${ALLOCLIBS})